--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,7 +1,7 @@
 <!--index.wxml-->
 <!--<import src="/dist/loadmore/index.wxml" />-->
 
-<scroll-view scroll-y="true" class="container"  bindscrolltolower="lower" enable-back-to-top="true"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
+<!--<scroll-view scroll-y="true" class="container"  bindscrolltolower="lower" enable-back-to-top="true"  scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
 
   <block wx:for="{{posts}}" wx:key="idx" wx:for-index="idx" wx:for-item="item" data-idx="{{idx}}">
     <view class="feed-item" id="{{item.id}}" bindtap="bindItemTap">
@@ -35,4 +35,8 @@
   <template is="zan-loadmore" data="{{ loading }}" />
   <template is="zan-loadmore" data="{{ nodata }}" />
   <template is="zan-loadmore" data="{{ nomore }}" />
-</scroll-view>
+</scroll-view>-->
+
+<view class="body" bindtap="click" bindtouchmove="click" bindtouchend="click" bindtouchstart="click" style="background-color:{{colorr}}">
+    <text class="index">冷月博客正在建设中~</text>
+  </view>
