--- a/pages/detail/detail.wxml
+++ b/pages/detail/detail.wxml
@@ -1,8 +1,38 @@
 <import src="../../wxParse/wxParse.wxml" />
-<import src="/dist/dialog/index.wxml" />
-<import src="/dist/toast/index.wxml" />
+<import src="/zanui/dialog/index.wxml" />
+<import src="/zanui/toast/index.wxml" />
 
-<view class="feed-item" id="{{post.id}}">
+<view  class="feed-item">
+    <view class="zan-font-14">
+        <text>{{article.art_title}}</text>
+    </view>
+    <view class="a-title-bottom">
+        <i-icon type="mine_fill" style="margin:0 0 0 20rpx;" size="10" color="#80848f"></i-icon>
+        <text class="a-title-bottom-text">{{article.art_author}}</text>
+
+        <i-icon type="brush_fill" style="margin:0 0 0 20rpx;" size="10" color="#80848f"></i-icon>
+        <text class="a-title-bottom-text">{{article.art_addtime}}</text>
+
+        <i-icon type="browse_fill" style="margin:0 0 0 5rpx;" size="10" color="#80848f"></i-icon>
+        <text class="a-title-bottom-text">{{article.art_hit}}</text>
+    </view>
+    <!--<view class="zan-font-12">
+        <text>
+            {{article.art_content}}
+        </text>
+    </view>-->
+    <view class="wxParse">
+        <template is="wxParse" data="{{wxParseData:articles.nodes}}" />
+    </view>
+</view>
+
+
+
+
+
+
+
+<!--<view class="feed-item" id="{{post.id}}">
   <view class="zan-font-16">
     <text>{{post.title}}</text>
   </view>
@@ -55,7 +85,8 @@
       </button>
     </view>
   </view>
-</view>
+</view>-->
 
+<!--
 <template is="zan-dialog" data="{{ zanDialog }}"></template>
-<template is="zan-toast" data="{{ zanToast }}"></template>
+<template is="zan-toast" data="{{ zanToast }}"></template>-->
