--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -37,4 +37,11 @@
 }
 page{
   height: 100%;
+  background-color: #f9f9f9;
+}
+.card-demo image {
+  border-radius: 50%;
+}
+i-card .i-card{
+    margin-bottom: 10px;
 }
