--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,47 +1,89 @@
 
-.container{
-  padding: 0;
-  height: 1500rpx;
-  color: #000;
-}
-.container .feed-item{
-  padding: 30rpx 30rpx 20rpx;
-  margin: 0rpx 0 6rpx 0;
-  background: #ffffff;
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+.container {
+    padding: 0;
+    height: 1500 rpx;
+    color: #000;
 }
 
-.container .feed-item .tag-body{
-  padding: 10rpx 0 0 0;
-  line-height: 28rpx;
-  color: #5b5b5b;
+.container .feed-item {
+    padding: 30 rpx 30 rpx 20 rpx;
+    margin: 0 rpx 0 6 rpx 0;
+    background: #ffffff;
+    border-top: 1px solid #eee;
+    border-bottom: 1px solid #eee;
+    box-shadow: 0 2px 5px #eeeeee;
 }
-.container .feed-item  .tag-actions{
-  padding: 10rpx 0  0;
-  color: #a0acac;
+
+.container .feed-item .tag-body {
+    padding: 10 rpx 0 0 0;
+    line-height: 28 rpx;
+    color: #5b5b5b;
 }
-.container .feed-item  .tag-actions view{
-  display: inline-block;
-  vertical-align: text-bottom;
-  padding: 0 10rpx 0 0;
+
+.container .feed-item .tag-actions {
+    padding: 10 rpx 0 0;
+    color: #a0acac;
 }
-.body{
-  text-align:center;display: flex;align-items: center;justify-content: center;width:100%;background-color: red;height:100%;
+
+.container .feed-item .tag-actions view {
+    display: inline-block;
+    vertical-align: text-bottom;
+    padding: 0 10 rpx 0 0;
 }
-.index{
-  font-size: 50rpx;
-  text-align: center;
-  color: #ffffff;
+
+.body {
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    background-color: red;
+    height: 100%;
 }
-page{
-  height: 100%;
-  background-color: #f9f9f9;
+
+.index {
+    font-size: 50 rpx;
+    text-align: center;
+    color: #ffffff;
 }
+
+page {
+    height: 100%;
+    background-color: #f9f9f9;
+}
+
 .card-demo image {
-  border-radius: 50%;
+    border-radius: 50%;
 }
-i-card .i-card{
+
+i-card .i-card {
     margin-bottom: 10px;
+}
+
+.leny-border {
+    animation: myfirst 5s;
+    border-bottom: 1px dashed #ccc;
+    padding-bottom: 8px;
+    border-bottom-width: 1px;
+}
+
+/*@keyframes myfirst
+{
+    from {border-bottom: 0px solid #ccc;}
+    to {border-bottom: 1px solid #ccc;}
+}*/
+
+/* 搜索栏 */
+.searchbar-result{
+    margin-top: 0;
+    font-size: 14px;
+}
+.searchbar-result:before{
+    display: none;
+}
+.weui-cell{
+    padding: 12px 15px 12px 35px;
+}
+.leny-fixed{
+    position: fixed;
 }
