--- a/pages/topic/topic.wxml
+++ b/pages/topic/topic.wxml
@@ -1,47 +1,41 @@
-<import src="/dist/tab/index.wxml" />
-<import src="/dist/loadmore/index.wxml" />
+<import src="/zanui/tab/index.wxml" />
+<import src="/zanui/loadmore/index.wxml" />
 
-<view class="container">
+<view class="container" i-class="me-foot">
 
-  <view class="zan-tab__bd--fixed">
-    <template is="zan-tab" data="{{ ...navTab, componentId: 'navTab' }}"></template>
-  </view>
-  <scroll-view class="scorll-margin" scroll-y="true" lower-threshold="5" bindscrolltolower="lower" scroll-with-animation="true" scroll-into-view="{{toView}}" scroll-top="{{scrollTop}}">
-    <block wx:for="{{posts}}" wx:for-index="idx" data-data="{{item}}">
+    <i-sticky scrollTop="{{scrollTop}}">
 
-      <view class="zan-panel zan-panel--without-top-border" >
-        <view class="zan-card">
-          <view class="zan-card__thumb">
-            <image class="zan-card__img" src="{{item.slug}}" data-index="{{idx}}" binderror="errorloadImage" mode="aspectFit"></image>
-          </view>
-          <view class="zan-card__detail" id="{{item.id}}" bindtap="bindItemTap">
-            <view class="zan-card__detail-row " style='height:60px'>
-              <view class="zan-card zan-ellipsis--l2">
-                <text>{{item.title}}</text>
-              </view>
-            </view>
-
-            <view class="zan-card__detail-row zan-c-gray-darker">
-              <view class="zan-card">
-                <view class="zan-icon zan-icon-contact zan-pull-left zan-font-12 zan-margin"> </view>
-                <view class="zan-ellipsis--l2 zan-pull-left zan-font-12 .zan-margin-tag">
-                  玄冰
-                </view>
-
-                <view class="zan-icon zan-icon-clock zan-pull-left zan-font-12 .zan-margin"></view>
-                <view class="zan-ellipsis--l2 zan-pull-left zan-font-12">
-                  <text>{{item.created_at}}</text>
-                </view>
-              </view>
-            </view>
-
-          </view>
+        <view slot="title">
+            <i-tabs current="{{ current_scroll }}" scroll bindchange="handleChangeScroll">
+                <block wx:for="{{categorys}}"  wx:key="key" wx:item="item">
+                    <i-tab key="{{item.menu_id}}" title="{{item.menu_name}}"></i-tab>
+                </block>
+            </i-tabs>
         </view>
-      </view>
 
-    </block>
-    <template is="zan-loadmore" data="{{ loading }}" />
-    <template is="zan-loadmore" data="{{ nodata }}" />
-    <template is="zan-loadmore" data="{{ nomore }}" />
-  </scroll-view>
+        <view wx:for="{{articles}}"  wx:key="key" wx:item="item">
+            <navigator url="../../pages/detail/detail?art_id={{item.art_id}}" hover-class="other-navigator-hover" style="margin-top: 10px;">
+                <i-card title="{{item.art_title}}" thumb="{{api+item.art_img}}">
+                    <!--<view slot="content">{{item.art_title}}</view>-->
+                    <view slot="footer">
+                        <i-icon type="browse_fill" style="margin:0 0 0 5px;" i-class="me-foot" color="#80848f"></i-icon>
+                        <text>{{item.art_hit}}</text>
+
+                        <i-icon type="mine_fill" style="margin:0 0 0 20px;" size="18" color="#80848f"></i-icon>
+                        <text>{{item.art_author}}</text>
+
+                        <i-icon type="brush_fill" style="margin:0 0 0 20px;" size="18" color="#80848f"></i-icon>
+                        <text>{{item.art_addtime}}</text>
+                    </view>
+                </i-card>
+                <!--<view style="margin-bottom: 8px;">
+                </view>-->
+            </navigator>
+        </view>
+
+    </i-sticky>
+    <!--<template is="zan-loadmore" data="{{ loading }}" />-->
+    <!--<template is="zan-loadmore" data="{{ nodata }}" />-->
+    <!--<template is="zan-loadmore" data="{{ nomore }}" />-->
+    <!--</scroll-view>-->
 </view>
